register_form.scss deleted, current forms refactored with .purple_form global - add modal pop up on user invite email sent - move modal to bottom of DOM to solve layout issue in /groups/[id]

--- a/styles/sass/globals.scss
+++ b/styles/sass/globals.scss
@@ -7,7 +7,6 @@
 @import './me_form_cont.scss';
 @import './create_topic_form.scss';
 @import './modal.scss';
-@import './register_form.scss';
 @import './thread.scss';
 @import './post_form.scss';
 @import './nav.scss';
@@ -263,11 +262,15 @@ form {
   margin-top: 5%;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: auto;
   grid-gap: 2em;
   border: 4px solid #C52BC5;
   border-radius: 12px;
   padding: 2em;
+
+  input {
+    width: 80%;
+  }
 }
 
 hr {
