--- a/styles/sass/search_form.scss
+++ b/styles/sass/search_form.scss
@@ -5,6 +5,11 @@
     justify-self: center;
   }
 
+  p {
+    width: 90%;
+    margin: 0 auto;
+  }
+
   select {
     width: 50%;
   }
